# ncnn_micro

./: CMakeLists.txt  README.md
data/model/mobilenetv2_f32/: mobilenet_v2_f32.param
include/: nm_layer_list.hh
tool/ncnnm_disassembler/: main.cc
